--- a/index.html
+++ b/index.html
@@ -8,17 +8,54 @@
   </head>
   <body>
     <div class="container">
-      <div class="box box1">1</div>
-      <div class="box box2">2</div>
-      <div class="box box3">3</div>
-      <div class="box box4">4</div>
-      <div class="box box5">5</div>
-      <div class="box box6">6</div>
-      <div class="box box7">7</div>
-      <div class="box box8">8</div>
-      <div class="box box9">9</div>
-      <div class="box box10">10</div>
-      <div class="box box11">11</div>
+      <div class="box box1">
+        <h3>CSS Grid Layout</h3>
+        <p>
+          This site is a collection of examples, video and other information to
+          help you learn CSS Grid Layout. Developed and maintained by Rachel
+          Andrew.
+        </p>
+      </div>
+      <div class="box box2">
+        <h3>The Video Tutorial</h2>
+          <p>A collection of short and to the point videos, demonstrating various parts of the CSS Grid Layout specification.</p>
+      </div>
+      <div class="box box3">
+        <h3>Get Started Guide</h3>
+        <p>A structured guide to resources that will help you to start learning CSS Grid Layout.</p>
+      </div>
+      <div class="box box4">
+        <h3>The Examples</h3>
+        <p>Small examples of the CSS Grid Layout specification. Each demonstrates a feature of the specification. Includes new Subgrid examples!</p>
+      </div>
+      <div class="box box5">
+        <h3>Patterns</h3>
+        <p>Grab & Go. A set of example patterns with fallbacks for older browsers.</p>
+      </div>
+      <div class="box box6">
+        <h3>Resources</h3>
+        <p>More links to articles, tutorials and conference presentations that will help you learn CSS Grid Layout.</p>
+      </div>
+      <div class="box box7">
+        <h3>CSS Layout News</h3>
+        <p>Sign up for a weekly email full of CSS Layout links and resources.</p>
+      </div>
+      <div class="box box8">
+        <h3>Questions?</h3>
+        <p>Ask me anything about Grid Layout over at my GitHub Grid AMA.</p>
+      </div>
+      <div class="box box9">
+        <h3>About CSS Grid</h3>
+        <p>What even is this? Do I need to care?</p>
+      </div>
+      <div class="box box10">
+        <h3>News</h3>
+        <p>Infrequent updates on this site.</p>
+      </div>
+      <div class="box box11">
+        <h3>GridBugs!</h3>
+        <p>If you have found a bug in a browser, or want to see what we have found so far, check out this site.</p>
+      </div>
     </div>
   </body>
 </html>
